--- a/index.html
+++ b/index.html
@@ -47,6 +47,6 @@
       </li>
     </ul>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="app.js"></script>
+    <script src="app-min.js"></script>
   </body>
 </html>
