--- a/index.html
+++ b/index.html
@@ -7,12 +7,10 @@
   </head>
   <body>
     <!-- Navbar-->
-    <div class="navbar" id="navbar">
-      <div class="flag">
+    <div class="navbar" id="navbar"><a class="flag" href="/">
         <div class="red"></div>
         <div class="white"></div>
-        <div class="blue"></div>
-      </div>
+        <div class="blue"></div></a>
       <div class="form-group">
         <input type="text" placeholder="Enter A Zip"><a class="ion-ios-search" href="#"></a>
       </div>
