Removed Compiled Files

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="content">
           <h1>Get Started</h1>
           <p>Every American should know who is representing them in congress. Finding this information can be hard, and it shouldn't be. This app makes it dead simple to find your congress members. Don't Believe me? Enter your zip code above to find out!</p>
-          <div class="btn-group"><a class="one" href="https://www.senate.gov/senators/contact/">Learn More</a><a class="two" href="#"><i class="ion-social-github"></i><span>Github</span></a></div>
+          <div class="btn-group"><a class="one" href="https://www.senate.gov/senators/contact/">Learn More</a><a class="two" href="https://github.com/meads2/Political-App"><i class="ion-social-github"></i><span>Github</span></a></div>
         </div>
       </li>
       <!-- Republican Rep-->
